--- a/Testing_Local_Propagation.ipynb
+++ b/Testing_Local_Propagation.ipynb
@@ -132,7 +132,7 @@
     }
    },
    "source": [
-    "If the dataset is 2-dimensional (i.e. $\\vec{x} \\in \\mathbb{R}^2$, then a sample will be displayed bellow."
+    "If the dataset is 2-dimensional (i.e. $\\vec{x} \\in \\mathbb{R}^2$), then a sample will be displayed bellow."
    ]
   },
   {
@@ -456,7 +456,7 @@
     "\n",
     "I hypothesize that it is possible to find an approach that lies in the middle of the interpolation between the sequential approach and the parallel approach. Note that in back-propagation parameters are updated from last to first (in reverse). This leads to the emergence of an interesting phenomenon: the parameters near the output layer change more than those farther away. This is one of the fundamental motivations for [Echo state networks](https://en.wikipedia.org/wiki/Echo_state_network). This phenomenon must not be confused with [the vanishing gradient problem](https://en.wikipedia.org/wiki/Vanishing_gradient_problem). In the former, parameter updates to layer near the input are small, because they need not be any larger. In local-propagation, it is not possible to know whether an update will have significant impact a posteriori, because there is no learning signal being back-propagated. I instead suggest recreating the same phenomenon in reverse, updating subsequent parameters slowly when needed. Picture a toy example where the input of some layer $i$ is 2-dimensional. The average magnitude of the displacement of the sampled inputs in the training batch is nearly zero along axis 0, but it is large along axis 1. This indicates that patterns present along axis 0 are now stable, so the parameters should be updated accordingly. Meanwhile, these updates should be made so that patterns present in axis 1 are ignored (for the time being). This will prevent the parameters of this layer from learning to be invariant to the features that are yet not stable.\n",
     "\n",
-    "On a similar note, in deep neural networks trained with gradient descent, intermediate representations are richer. They encode information that will be necessary for layer closer to the output. In local-propagation this occurs by chance, since there is no way for layer $i$ to know what kind of information some layer $i + k$ will need, where $k \\geq 1$. As a result, it is necessary to also encourage each layer to compress as much information as possible. On way of doing it could be employing multiple linear decoders instead of one (per layer). By some metric, each decoder can be encouraged to try separating the points in $H_i$ in different ways. So that the layer is encouraged to encode representations with multiple (and as different as possible) linear separations."
+    "On a similar note, in deep neural networks trained with gradient descent, intermediate representations are richer. They encode information that will be necessary for layers closer to the output. In local-propagation this occurs by chance, since there is no way for layer $i$ to know what kind of information some layer $i + k$ will need, where $k \\geq 1$. As a result, it is necessary to also encourage each layer to compress as much information as possible. One way of doing it could be employing multiple linear decoders instead of one (per layer). By some metric, each decoder can be encouraged to try separating the points in $H_i$ in different ways. So that the layer is encouraged to encode representations with multiple (and as different as possible) linear separations."
    ]
   }
  ],
